--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -22,10 +22,10 @@
 	margin-left: auto;
 	margin-right: auto;
 	@media screen and (min-width: $break-l) {
-		width: 850px;
+		width: 1003px;
 	}
 	@media screen and (min-width: $break-xl) {
-	width: 1100px;
+	width: 1211px;
 }
 }
 
@@ -88,7 +88,7 @@
 	left: 0;
 	z-index: 100;
 	}
-	
+
 	@mixin image-caption {
 		color: white;
 		font-weight: 600;
