--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -19,18 +19,22 @@
 
 .btn-navbar {
 	background-color: $color-navbar;
-	width: 150px;
+	width: 159px;
 	height: 94px;
 	line-height: 0.3;
 	text-transform: uppercase;
 	font-weight: 600;
 	border-bottom: none;
 	border-top: none;
-	border-right: 1px solid rgba(163, 163, 163, 0.3);
-	border-left: 1px solid rgba(163, 163, 163, 0.3);
+	border-right: 1px solid rgba(0, 0, 0, 0.25);
+	border-left: 1px solid rgba(255, 255, 255, 0.1);
 	@media only screen and (min-width: $break-xl ) {
-		width: 199px;
+		width: 194px;
 	}
+}
+
+.btn-cyber-security {
+	border-right: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 .container {
@@ -38,7 +42,7 @@
 	display: flex;
 	justify-content: center;
 	min-width: 100%;
-
+margin-left: -1rem;
 }
 
 .li-main {
@@ -66,6 +70,7 @@
 		@include second-nav-background;
 		background-color: darken($color: $color-web-design, $amount: 10%);
 		}
+	
 	.li-web-design { //flexbox items
 		@include navbar-flexbox-items;
 		}
